update .dropdown-content rules to prevent text wrapping

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -64,7 +64,7 @@ $on-laptop:        800px !default;
   position: absolute;
   color: #000000;
   background-color: #f9f9f9;
-  min-width: 800px;
+  white-space: nowrap;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   padding: 12px 16px;
   z-index: 1;
